--- a/m/6/index.html
+++ b/m/6/index.html
@@ -8,55 +8,9 @@
 
 
         <style>
-        body {
-  width: 100vw;
-  height: 100vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-h1 {
-  font-size: 12em;
-  -webkit-animation-name: r;
-          animation-name: r;
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
-  -webkit-animation-iteration-count: 30;
-          animation-iteration-count: 30;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-}
-
-@-webkit-keyframes r {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes r {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
+        iframe{
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg)
 }
         </style>
 
@@ -67,7 +21,18 @@ h1 {
 
   <body>
 
-    <h1>6</h1>
+
+<h1>6</h1>
+<iframe src="http://hse.ru" width="100%" height="600px"></iframe>
+
+<script src='../js/tm.js'></script>
+
+
+
+
+  </body>
+</html>
+
 
 
 
