--- a/m/1/index.html
+++ b/m/1/index.html
@@ -21,7 +21,7 @@
 <script src='http://chancejs.com/chance.min.js'></script>
 
         <script src="js/index.js"></script>
-
+<audio autoplay="autoplay" src='../audio/1.mp3'></audio>
     <script src='../js/tm.js'></script>
 
 
