--- a/m/2/index.html
+++ b/m/2/index.html
@@ -110,7 +110,8 @@ function update() {
 }
 
         </script>
-
+<audio autoplay="autoplay" src='../audio/2.mp3'></audio>
+<script src='../js/tm.js'></script>
     </body>
-    <script src='../js/tm.js'></script>
+
 </html>
