--- a/m/7/index.html
+++ b/m/7/index.html
@@ -201,7 +201,7 @@ $(window).resize(function() {
 
 </div>
 <!--/allrecords-->
-
+<audio autoplay="autoplay" src='../audio/7.mp3'></audio>
     <h1>7</h1>
     <script src='../js/tm.js'></script>
 
