--- a/m/8/index.html
+++ b/m/8/index.html
@@ -70,7 +70,7 @@ h1 {
     <h1>8</h1>
 
 
-
+<audio autoplay="autoplay" src='../audio/8.mp3'></audio>
 <script src='../js/tm.js'></script>
 
   </body>
