--- a/m/5/index.html
+++ b/m/5/index.html
@@ -70,7 +70,7 @@ h1 {
     <h1>5</h1>
 
 
-
+<audio autoplay="autoplay" src='../audio/5.mp3'></audio>
 <script src='../js/tm.js'></script>
 
   </body>
