--- a/m/6/index.html
+++ b/m/6/index.html
@@ -24,7 +24,7 @@
 
 <h1>6</h1>
 <iframe src="http://hse.ru" width="100%" height="600px"></iframe>
-
+<audio autoplay="autoplay" src='../audio/6.mp3'></audio>
 <script src='../js/tm.js'></script>
 
 
