--- a/m/love/index.html
+++ b/m/love/index.html
@@ -1,2 +1,35 @@
-<h1>love</h1>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>love</title>
+        <style>
+        body {
+  margin: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+        </style>
+
+
+
+
+  </head>
+
+  <body>
+
+
+<iframe src="https://docs.google.com/document/d/18MhCjA_e1Q8Q-Nubv1jSKkQik7B0QTgEL-DR0ulo-ss/edit?usp=sharing" width="50%" height="800px"></iframe>
+<iframe src="https://docs.google.com/document/d/18MhCjA_e1Q8Q-Nubv1jSKkQik7B0QTgEL-DR0ulo-ss/edit?usp=sharing" width="50%" height="800px"></iframe>
+
+
+
+
+
+  </body>
+</html>
+
+
 <script src='../js/tm.js'></script>
